## Makefile.am -- Process this file with automake to produce Makefile.in
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
# 02110-1301 USA
#

daemonsdir = $(pkgdatadir)/daemons

dist_daemons_SCRIPTS = \
		uw-client.pl uw-server.pl test.pl openvpn-event.sh-example

dist_daemons_DATA = \
		uw-common.inc.pm uw-ssl.inc.pm uw-cache.inc.pm uw-groups.inc.pm \
		uw-ldap.inc.pm uw-vpn.inc.pm

